--- a/public/contact.html
+++ b/public/contact.html
@@ -117,7 +117,7 @@
                                     <span class="fas fa-phone-alt"></span>
                                 </div>
                                 <div class="cont-right">
-                                    <h5>Phone number</h5>
+                                    <h5>Make a Call</h5>
                                     <p><a href="tel:+(21) 255 088 4943">+(21) 255 088 4943</a></p>
                                 </div>
                             </div>
@@ -126,7 +126,7 @@
                                     <span class="fas fa-envelope-open-text"></span>
                                 </div>
                                 <div class="cont-right">
-                                    <h5>Send Email</h5>
+                                    <h5>Send a Mail</h5>
                                     <p><a href="mailto:DigitMarkrting@mail.com" class="mail">DigitMarkrting@mail.com</a></p>
                                 </div>
                             </div>
@@ -135,7 +135,7 @@
                                     <span class="fas fa-map-marker-alt"></span>
                                 </div>
                                 <div class="cont-right">
-                                    <h5>Office Address</h5>
+                                    <h5>Main Offline</h5>
                                     <p class="pr-lg-5">Address here, 434 Agency Honey street,<br> London, UK - 62617.</p>
                                 </div>
                             </div>
@@ -173,7 +173,7 @@
 
                         <textarea name="w3lMessage" class="form-control" id="w3lMessage" placeholder="Message" required=""></textarea>
                         <div class="text-lg-center">
-                            <button type="submit" class="btn btn-primary btn-style mt-lg-5 mt-4">Send Message</button>
+                            <button type="submit" class="btn btn-primary btn-style mt-lg-5 mt-4">Get A Free Quote</button>
                         </div>
                     </form>
                 </div>
@@ -193,7 +193,7 @@
                             <h2><a class="navbar-brand" href="index.html">
                                 <span class="sublog">Absa </span>Capital                                </a></h2>
                         </div>
-                        <p>Lorem ipsum dolor sit, amet consectetur elit.Pellen tesque libero ut justo, ultrices in ligula accusantium libero fugit.
+                        <p>We appreciate your interest in UEIB Please find below various options to reach us. For our subsidiary companies’ information.
 
                         </p>
                         <div class="w3l-two-buttons mt-4">
