--- a/public/index.html
+++ b/public/index.html
@@ -88,10 +88,10 @@
             <div class="row align-items-center w3l-slider-grids">
                 <div class="col-lg-6 w3l-slider-left-info pe-lg-5">
                     <h6 class="title-subhny mb-2">We are gathered</h6>
-                    <h3 class="mb-2 title"> <span>For</span> Your </h3>
-                    <h3 class="mb-4 title">Digital Marketing</h3>
-                    <p class="w3banr-p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident, excepturi.
-                        Distinctio accusantium fugit odit fugit ipsam.</p>
+                    <h3 class="mb-2 title"> <span>Financial Guidance
+                        </span> For Every </h3>
+                    <h3 class="mb-4 title"> Stage Of Life.</h3>
+                    <p class="w3banr-p">We Provide legendary experiences and trusted advice.</p>
                     <div class="w3l-buttons mt-sm-5 mt-4">
                         <a class="btn btn-primary btn-style me-2" href="about.html">Read More </a>
                         <a class="btn btn-outline-primary btn-style " href="contact.html"> Get Started </a>
@@ -436,7 +436,7 @@
                     <div class="col-lg-6 w3l-project-right">
                         <div class="bottom-info">
                             <div class="header-section pr-lg-5">
-                                <h6 class="title-subhny mb-2">Stay Update!</h6>
+                                <h6 class="title-subhny mb-2">Quick Service Request</h6>
                                 <h3 class="title-w3l">Subscribe to our newsletter
                                 </h3>
                             </div>
