initialize firebase hosting with github actions and workflow

--- a/public/contact.html
+++ b/public/contact.html
@@ -1,4 +1,3 @@
-
 <!doctype html>
 <html lang="en">
 
@@ -9,7 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Absa Capital - </title>
     <!--/google-fonts -->
-    <link href="//fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,700;1,400;1,600&display=swap" rel="stylesheet">
+    <link href="//fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,700;1,400;1,600&display=swap"
+        rel="stylesheet">
     <!--//google-fonts -->
     <!-- Template CSS -->
     <link rel="stylesheet" href="assets/css/style-starter.css">
@@ -23,7 +23,9 @@
                 <h1><a class="navbar-brand pe-xl-5 pe-lg-4" href="index.html">
                         <span class="sublog">Absa </span>Capital
                     </a></h1>
-                <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false"
+                    aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon fa icon-expand fa-bars"></span>
                     <span class="navbar-toggler-icon fa icon-close fa-times"></span>
                 </button>
@@ -35,7 +37,7 @@
                         <li class="nav-item">
                             <a class="nav-link" href="about.html">About</a>
                         </li>
-<li class="nav-item">
+                        <li class="nav-item">
                             <a class="nav-link" href="services.html">Services</a>
                         </li>
                         <li class="nav-item">
@@ -46,7 +48,9 @@
                     <ul class="navbar-nav search-right mt-lg-0 mt-2">
                         <li class="nav-item" title="Search"><a href="#search" class="search-search">
                                 <span class="fas fa-search" aria-hidden="true"></span></a></li>
-                        <li class="nav-item me-lg-3"><a href="" class="phone-btn btn btn-primary btn-style d-none d-lg-block btn-style ms-2">Login</a></li>
+                        <li class="nav-item me-lg-3"><a href=""
+                                class="phone-btn btn btn-primary btn-style d-none d-lg-block btn-style ms-2">Login</a>
+                        </li>
                     </ul>
 
                     <!-- //toggle switch for light and dark theme -->
@@ -55,7 +59,8 @@
                     <div id="search" class="w3lpop-overlay">
                         <div class="w3lpopup">
                             <form action="#formsearch" method="GET" class="d-sm-flex">
-                                <input class="form-control me-2" type="search" placeholder="Search here..." aria-label="Search" required="">
+                                <input class="form-control me-2" type="search" placeholder="Search here..."
+                                    aria-label="Search" required="">
                                 <button class="btn btn-style btn-primary" type="submit">Search</button>
                                 <a class="close" href="#formsearch">&times;</a>
                             </form>
@@ -107,11 +112,13 @@
                     <div class="col-lg-5 cont-details pe-lg-5">
                         <div class="contactct-fm-text text-left">
                             <h6 class="title-subhny">Say Hello</h6>
-                            <h3 class="title-w3l mb-2">Get In Touch
+                            <h3 class="title-w3l mb-2">Any Question?
+                                <br>
+                                Write Down And Send Us
                             </h3>
-                            <p class="mb-sm-5 mb-4">Start working with Us that can provide everything you need to generate awareness,
-                                drive traffic,
-                                connect.We guarantee that you’ll be able to have any issue resolved within 24 hours.</p>
+                            <p class="mb-sm-5 mb-4">
+                                Neither us nor any of our affiliates will ever ask you for your Social Security number,
+                                account information, passwords or PINs via Facebook or Twitter</p>
                             <div class="cont-top">
                                 <div class="cont-left text-center">
                                     <span class="fas fa-phone-alt"></span>
@@ -127,7 +134,8 @@
                                 </div>
                                 <div class="cont-right">
                                     <h5>Send a Mail</h5>
-                                    <p><a href="mailto:DigitMarkrting@mail.com" class="mail">DigitMarkrting@mail.com</a></p>
+                                    <p><a href="mailto:DigitMarkrting@mail.com" class="mail">DigitMarkrting@mail.com</a>
+                                    </p>
                                 </div>
                             </div>
                             <div class="cont-top margin-up">
@@ -136,7 +144,8 @@
                                 </div>
                                 <div class="cont-right">
                                     <h5>Main Offline</h5>
-                                    <p class="pr-lg-5">Address here, 434 Agency Honey street,<br> London, UK - 62617.</p>
+                                    <p class="pr-lg-5">Address here, 434 Agency Honey street,<br> London, UK - 62617.
+                                    </p>
                                 </div>
                             </div>
                         </div>
@@ -144,7 +153,10 @@
                     <div class="col-lg-7 cont-details mt-lg-0 mt-5">
                         <div class="map-content-9">
                             <div class="map-iframe">
-                                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d317718.69319292053!2d-0.3817765050863085!3d51.528307984912544!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47d8a00baf21de75%3A0x52963a5addd52a99!2sLondon%2C+UK!5e0!3m2!1sen!2spl!4v1562654563739!5m2!1sen!2spl" width="100%" height="400" frameborder="0" style="border: 0px;" allowfullscreen=""></iframe>
+                                <iframe
+                                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d317718.69319292053!2d-0.3817765050863085!3d51.528307984912544!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47d8a00baf21de75%3A0x52963a5addd52a99!2sLondon%2C+UK!5e0!3m2!1sen!2spl!4v1562654563739!5m2!1sen!2spl"
+                                    width="100%" height="400" frameborder="0" style="border: 0px;"
+                                    allowfullscreen=""></iframe>
                             </div>
                         </div>
                     </div>
@@ -166,14 +178,19 @@
                 <div class="contactct-fm map-content-9">
                     <form action="https://sendmail.absacapital.com/submitForm" class="pt-lg-4" method="post">
                         <div class="twice-two">
-                            <input type="text" class="form-control" name="w3lName" id="w3lName" placeholder="Name" required="">
-                            <input type="email" class="form-control" name="w3lSender" id="w3lSender" placeholder="Email" required="">
-                            <input type="text" class="form-control" name="w3lSubject" id="w3lSubject" placeholder="Subject" required="">
+                            <input type="text" class="form-control" name="w3lName" id="w3lName" placeholder="Name"
+                                required="">
+                            <input type="email" class="form-control" name="w3lSender" id="w3lSender" placeholder="Email"
+                                required="">
+                            <input type="text" class="form-control" name="w3lSubject" id="w3lSubject"
+                                placeholder="Subject" required="">
                         </div>
 
-                        <textarea name="w3lMessage" class="form-control" id="w3lMessage" placeholder="Message" required=""></textarea>
+                        <textarea name="w3lMessage" class="form-control" id="w3lMessage" placeholder="Message"
+                            required=""></textarea>
                         <div class="text-lg-center">
-                            <button type="submit" class="btn btn-primary btn-style mt-lg-5 mt-4">Get A Free Quote</button>
+                            <button type="submit" class="btn btn-primary btn-style mt-lg-5 mt-4">Get A Free
+                                Quote</button>
                         </div>
                     </form>
                 </div>
@@ -191,9 +208,10 @@
                     <div class="col-lg-4 col-md-6 footer-list-29 footer-1 pe-lg-5">
                         <div class="footer-logo mb-4">
                             <h2><a class="navbar-brand" href="index.html">
-                                <span class="sublog">Absa </span>Capital                                </a></h2>
+                                    <span class="sublog">Absa </span>Capital </a></h2>
                         </div>
-                        <p>We appreciate your interest in UEIB Please find below various options to reach us. For our subsidiary companies’ information.
+                        <p>We appreciate your interest in Absa Capital, <br> Please find below various options to reach us. For our
+                            subsidiary companies’ information.
 
                         </p>
                         <div class="w3l-two-buttons mt-4">
@@ -209,37 +227,32 @@
                     <div class="col-lg-2 col-md-6 footer-list-29 footer-2 mt-sm-0 mt-5">
 
                         <ul>
-                            <h6 class="footer-title-29">Links</h6>
-                            <li><a href="about.html">About Us</a></li>
-                            <li><a href="blog.html"> Blog posts</a></li>
-                            <li><a href="services.html">Services</a></li>
-                            <li><a href="blog.html"> Blog posts</a></li>
-                            <li><a href="contact.html">Contact us</a></li>
+                            <h6 class="footer-title-29">Quick Links</h6>
+                            <li><a href="about.html">Privacy Policy</a></li>
+                            <li><a href="blog.html">Terms of Service</a></li>
+                            <li><a href="index.html">Online Access</a></li>
+                            <li><a href="blog.html">FAq</a></li>
 
                         </ul>
                     </div>
                     <div class="col-lg-2 col-md-6 footer-list-29 footer-3 mt-lg-0 mt-5">
-                        <h6 class="footer-title-29">Services</h6>
+                        <h6 class="footer-title-29">Our Services</h6>
                         <ul>
-                            <li><a href="#traning">Web Design</a></li>
-                            <li><a href="#traning">Development</a></li>
-                            <li><a href="#traning">Marketing Plans</a></li>
-                            <li><a href="#marketplace">Digital Services</a></li>
-                            <li><a href="#experts">Email Marketing</a></li>
-                            <li><a href="#platform">Product Selling</a></li>
+                            <li><a href="services.html">Investment Planning</a></li>
+                            <li><a href="services.html">Financial Planning</a></li>
+                            <li><a href="services.html">Investor Relations</a></li>
+                            <li><a href="services.html">Guarantee Deposit Account</a></li>
                         </ul>
 
                     </div>
                     <div class="col-lg-2 col-md-6  footer-list-29 footer-4 mt-lg-0 mt-5">
                         <h6 class="footer-title-29">More Info</h6>
                         <ul>
-                            <li><a href="#seo">Offline SEO</a></li>
-                            <li><a href="#traning">Development</a></li>
-                            <li><a href="#hack">Growth Hacking</a></li>
-                            <li><a href="#studio">Film Studio</a></li>
-                            <li><a href="#branding">Branding</a></li>
-                            <li><a href="#experts">Email Marketing</a></li>
-                            <li><a href="#marketplace">Lead Generation</a></li>
+                            <li><a href="about.html">About Us</a></li>
+                            <li><a href="contact.html">Contact Us</a></li>
+                            <li><a href="services.html">Services </a></li>
+                            <li><a href="index.html">FAq</a></li>
+
                         </ul>
                     </div>
                     <div class="col-lg-2 col-md-6  footer-list-29 footer-4 mt-lg-0 mt-5">
@@ -249,13 +262,8 @@
                             <li><a href="#secutiry">Security</a></li>
 
                             <li><a href="#proj">Products</a></li>
-                            <li><a href="#efaq">faQ</a></li>
-                            <li><a href="#help">Help</a></li>
                             <li><a href="#mail">Mail Us</a></li>
-                            <li><a href="#terms">Terms
-                                </a></li>
-                            <li><a href="#policy">Privacy Policy</a></li>
-
+                           
 
                         </ul>
                     </div>
@@ -265,8 +273,9 @@
         <!-- copyright -->
         <section class="w3l-copyright text-center">
             <div class="container">
-                <p class="copy-footer-29">© 2024 Absa Capital. All rights reserved. Design by <a href="https://google.com/" target="_blank">
-                        Absa</a></p>
+                <p class="copy-footer-29">© 2024 Absa Capital. All rights reserved.<a
+                        href="https://google.com/" target="_blank">
+                        </a></p>
             </div>
 
             <!-- move top -->
@@ -275,7 +284,7 @@
             </button>
             <script>
                 // When the user scrolls down 20px from the top of the document, show the button
-                window.onscroll = function() {
+                window.onscroll = function () {
                     scrollFunction()
                 };
 
@@ -305,7 +314,7 @@
     <script src="assets/js/theme-change.js"></script>
     <!-- MENU-JS -->
     <script>
-        $(window).on("scroll", function() {
+        $(window).on("scroll", function () {
             var scroll = $(window).scrollTop();
 
             if (scroll >= 80) {
@@ -316,14 +325,14 @@
         });
 
         //Main navigation Active Class Add Remove
-        $(".navbar-toggler").on("click", function() {
+        $(".navbar-toggler").on("click", function () {
             $("header").toggleClass("active");
         });
-        $(document).on("ready", function() {
+        $(document).on("ready", function () {
             if ($(window).width() > 991) {
                 $("header").removeClass("active");
             }
-            $(window).on("resize", function() {
+            $(window).on("resize", function () {
                 if ($(window).width() > 991) {
                     $("header").removeClass("active");
                 }
@@ -335,8 +344,8 @@
 
     <!-- disable body scroll which navbar is in active -->
     <script>
-        $(function() {
-            $('.navbar-toggler').click(function() {
+        $(function () {
+            $('.navbar-toggler').click(function () {
                 $('body').toggleClass('noscroll');
             })
         });
