--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,7 @@
         <div class="container">
             <nav class="navbar navbar-expand-lg navbar-light stroke py-lg-0">
                 <h1><a class="navbar-brand pe-xl-5 pe-lg-4" href="index.html">
+                    <img src="assets/images/absa.jpg"/>
                         <span class="sublog">Absa </span>Capital
                     </a></h1>
                 <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
@@ -102,7 +103,7 @@
 
                                 <div class="slider-info">
                                     <div class="w3l-slidehny-img banner-top1">
-                                        <img src="assets/images/banner1.jpg" alt="" class="radius-image img-fluid">
+                                        <img src="assets/images/absa.jpg" alt="" class="radius-image img-fluid">
                                     </div>
                                 </div>
                             
@@ -463,9 +464,10 @@
                     <div class="col-lg-4 col-md-6 footer-list-29 footer-1 pe-lg-5">
                         <div class="footer-logo mb-4">
                             <h2><a class="navbar-brand" href="index.html">
-                                <span class="sublog">Absa </span>Capital                                </a></h2>
+                                    <span class="sublog">Absa </span>Capital </a></h2>
                         </div>
-                        <p>Lorem ipsum dolor sit, amet consectetur elit.Pellen tesque libero ut justo, ultrices in ligula accusantium libero fugit.
+                        <p>We appreciate your interest in Absa Capital, <br> Please find below various options to reach us. For our
+                            subsidiary companies’ information.
 
                         </p>
                         <div class="w3l-two-buttons mt-4">
@@ -481,37 +483,32 @@
                     <div class="col-lg-2 col-md-6 footer-list-29 footer-2 mt-sm-0 mt-5">
 
                         <ul>
-                            <h6 class="footer-title-29">Links</h6>
-                            <li><a href="about.html">About Us</a></li>
-                            <li><a href="blog.html"> Blog posts</a></li>
-                            <li><a href="services.html">Services</a></li>
-                            <li><a href="blog.html"> Blog posts</a></li>
-                            <li><a href="contact.html">Contact us</a></li>
+                            <h6 class="footer-title-29">Quick Links</h6>
+                            <li><a href="about.html">Privacy Policy</a></li>
+                            <li><a href="blog.html">Terms of Service</a></li>
+                            <li><a href="index.html">Online Access</a></li>
+                            <li><a href="blog.html">FAq</a></li>
 
                         </ul>
                     </div>
                     <div class="col-lg-2 col-md-6 footer-list-29 footer-3 mt-lg-0 mt-5">
-                        <h6 class="footer-title-29">Services</h6>
+                        <h6 class="footer-title-29">Our Services</h6>
                         <ul>
-                            <li><a href="#traning">Web Design</a></li>
-                            <li><a href="#traning">Development</a></li>
-                            <li><a href="#traning">Marketing Plans</a></li>
-                            <li><a href="#marketplace">Digital Services</a></li>
-                            <li><a href="#experts">Email Marketing</a></li>
-                            <li><a href="#platform">Product Selling</a></li>
+                            <li><a href="services.html">Investment Planning</a></li>
+                            <li><a href="services.html">Financial Planning</a></li>
+                            <li><a href="services.html">Investor Relations</a></li>
+                            <li><a href="services.html">Guarantee Deposit Account</a></li>
                         </ul>
 
                     </div>
                     <div class="col-lg-2 col-md-6  footer-list-29 footer-4 mt-lg-0 mt-5">
                         <h6 class="footer-title-29">More Info</h6>
                         <ul>
-                            <li><a href="#seo">Offline SEO</a></li>
-                            <li><a href="#traning">Development</a></li>
-                            <li><a href="#hack">Growth Hacking</a></li>
-                            <li><a href="#studio">Film Studio</a></li>
-                            <li><a href="#branding">Branding</a></li>
-                            <li><a href="#experts">Email Marketing</a></li>
-                            <li><a href="#marketplace">Lead Generation</a></li>
+                            <li><a href="about.html">About Us</a></li>
+                            <li><a href="contact.html">Contact Us</a></li>
+                            <li><a href="services.html">Services </a></li>
+                            <li><a href="index.html">FAq</a></li>
+
                         </ul>
                     </div>
                     <div class="col-lg-2 col-md-6  footer-list-29 footer-4 mt-lg-0 mt-5">
@@ -521,13 +518,8 @@
                             <li><a href="#secutiry">Security</a></li>
 
                             <li><a href="#proj">Products</a></li>
-                            <li><a href="#efaq">faQ</a></li>
-                            <li><a href="#help">Help</a></li>
                             <li><a href="#mail">Mail Us</a></li>
-                            <li><a href="#terms">Terms
-                                </a></li>
-                            <li><a href="#policy">Privacy Policy</a></li>
-
+                           
 
                         </ul>
                     </div>
@@ -537,8 +529,9 @@
         <!-- copyright -->
         <section class="w3l-copyright text-center">
             <div class="container">
-                <p class="copy-footer-29">© 2024 Absa Capital. All rights reserved. Design by <a href="https://Absa Capital.com/" target="_blank">
-                        Absa</a></p>
+                <p class="copy-footer-29">© 2024 Absa Capital. All rights reserved.<a
+                        href="https://google.com/" target="_blank">
+                        </a></p>
             </div>
 
             <!-- move top -->
