"Added Absa logo image to navigation bar and footer in about, contact, index, and services HTML pages"

--- a/public/about.html
+++ b/public/about.html
@@ -21,6 +21,8 @@
         <div class="container">
             <nav class="navbar navbar-expand-lg navbar-light stroke py-lg-0">
                 <h1><a class="navbar-brand pe-xl-5 pe-lg-4" href="index.html">
+                    <img src="assets/images/absa-logo.png" height="40" width="40"/>
+
                         <span class="sublog">Absa </span>Capital
                     </a></h1>
                 <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse"
@@ -423,6 +425,8 @@
                 <div class="col-lg-4 col-md-6 footer-list-29 footer-1 pe-lg-5">
                     <div class="footer-logo mb-4">
                         <h2><a class="navbar-brand" href="index.html">
+                    <img src="assets/images/absa-logo.png" height="40" width="40"/>
+
                                 <span class="sublog">Absa </span>Capital </a></h2>
                     </div>
                     <p>We appreciate your interest in Absa Capital, <br> Please find below various options to reach us. For our
