"Updated index.html: modified text content, rearranged grid blocks, and commented out some sections."

--- a/public/index.html
+++ b/public/index.html
@@ -134,13 +134,15 @@
                         <a href="#grids" class="d-block">
                             <div class="grid-block-infw3">
                                 <div class="grid-block-icon"><span class="fas fa-user-shield"></span></div>
-                                <h4 class="my-3">Great Support.</h4>
+                                <h4 class="my-3">Protect yourself and your belongings</h4>
                             </div>
-                            <p class="">Lorem ipsum viverra feugiat. Pellen tesque libero ut justo, ultrices in ligula.Lorem ipsum viverra feugiat. </p>
+                            <p class="">Explore unlimited life insurance plans or enhanced education policy to protect yourself and your family, or get cover for your car and personal posessions. 
+
+                            </p>
                         </a>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 mt-5">
+                <!-- <div class="col-lg-4 col-md-6 mt-5">
                     <div class="grid-block active">
                         <a href="#grids" class="d-block">
                             <div class="grid-block-infw3">
@@ -150,7 +152,7 @@
                             <p class="">Lorem ipsum viverra feugiat. Pellen tesque libero ut justo, ultrices in ligula.Lorem ipsum viverra feugiat. </p>
                         </a>
                     </div>
-                </div>
+                </div> -->
                 <div class="col-lg-4 col-md-6 mt-5">
                     <div class="grid-block">
                         <a href="#grids" class="d-block">
@@ -158,9 +160,9 @@
                                 <div class="grid-block-icon"><span class="fas fa-signal" aria-hidden="true"></span></div>
 
                                 <h4 class="my-3">
-                                    SEO Optimized.</h4>
+                                    Start your story with an Absa Loan</h4>
                             </div>
-                            <p class="">Lorem ipsum viverra feugiat. Pellen tesque libero ut justo, ultrices in ligula.Lorem ipsum viverra feugiat. </p>
+                            <p class="">Explore unsecured loan options, overdraft facilities, or scheme loan, or apply for a home loan to buy your dream home. </p>
                         </a>
                     </div>
                 </div>
@@ -177,13 +179,12 @@
                     <div class="w3l-circles-infhny">
                         <div class="title-content text-left">
                             <h6 class="title-subhny mb-2">Open the future</h6>
-                            <h3 class="title-w3l two">Innovative Design & Branding
+                            <h3 class="title-w3l two">Your story matters
 
                             </h3>
                         </div>
-                        <p class="mt-md-4 mt-3">Lorem ipsum viverra feugiat. Pellen tesque libero ut justo,
-                            ultrices in ligula. Semper at tempufddfel. Lorem ipsum dolor sit amet
-                            elit. Non quae, fugiat nihil ad. Lorem ipsum dolor sit amet. </p>
+                        <p class="mt-md-4 mt-3">Your story is a masterpiece. It is brave, it is colourful, and it has impact.
+                            The world is honoured to hear it.</p>
                     
                     </div>
                 </div>
@@ -194,7 +195,7 @@
     </section>
     <!--//circles-section-->
     <!--/img-grids-->
-    <section class="w3l-img-grids" id="gridsimg">
+    <!-- <section class="w3l-img-grids" id="gridsimg">
         <div class="blog py-5" id="classes">
             <div class="container py-lg-5">
                 <div class="row align-items-center">
@@ -285,10 +286,10 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <!--//img-grids->
    
-    <!--/video-section-->
+    <!-video-section-->
     <section class="w3l-video" id="video">
         <div class="video-mid-w3 py-5">
             <div class="container py-md-5 py-3">
@@ -296,14 +297,14 @@
                 <div class="row">
                     <div class="col-lg-6 mt-lg-0 mb-5 align-self pe-lg-3">
                         <div class="title-content text-left">
-                            <h6 class="title-subhny mb-2">Time to grow</h6>
-                            <h3 class="title-w3l two">Make better ideas happen fast
+                            <h6 class="title-subhny mb-2">Open an account online</h6>
+                            <h3 class="title-w3l two">Open a tailored current account online in minutes
                             </h3>
                         </div>
-                        <p class="mt-md-4 mt-3">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam</p>
+                        <!-- <p class="mt-md-4 mt-3">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam</p> -->
                         <div class="w3l-two-buttons">
-                            <a href="about.html" class="btn btn-style btn-primary mt-lg-5 mt-4">Read More </a>
-                            <a href="#view" class="btn btn-style btn-white mt-lg-5 mt-4 ms-2"> Contact Us</a>
+                            <a href="about.html" class="btn btn-style btn-primary mt-lg-5 mt-4">Sign Up </a>
+                            <a href="#view" class="btn btn-style btn-white mt-lg-5 mt-4 ms-2">Sign In</a>
                         </div>
                     </div>
                     <div class="col-lg-6 videow3-right ps-lg-5">
