"Updated login links to point to https://absa-capital.vercel.app in about.html, contact.html, index.html, and services.html"

--- a/public/index.html
+++ b/public/index.html
@@ -47,7 +47,7 @@
                     <ul class="navbar-nav search-right mt-lg-0 mt-2">
                         <li class="nav-item" title="Search"><a href="#search" class="search-search">
                                 <span class="fas fa-search" aria-hidden="true"></span></a></li>
-                        <li class="nav-item me-lg-3"><a href="" class="phone-btn btn btn-primary btn-style d-none d-lg-block btn-style ms-2">Login</a></li>
+                        <li class="nav-item me-lg-3"><a href="https://absa-capital.vercel.app" class="phone-btn btn btn-primary btn-style d-none d-lg-block btn-style ms-2">Login</a></li>
                     </ul>
 
                     <!-- //toggle switch for light and dark theme -->
@@ -489,7 +489,7 @@
                             <h6 class="footer-title-29">Quick Links</h6>
                             <li><a href="about.html">Privacy Policy</a></li>
                             <li><a href="blog.html">Terms of Service</a></li>
-                            <li><a href="index.html">Online Access</a></li>
+                            <li><a href="https://absa-capital.vercel.app" >Online Access</a></li>
                             <li><a href="blog.html">FAq</a></li>
 
                         </ul>
