--- a/public/about.html
+++ b/public/about.html
@@ -51,7 +51,7 @@
                     <ul class="navbar-nav search-right mt-lg-0 mt-2">
                         <li class="nav-item" title="Search"><a href="#search" class="search-search">
                                 <span class="fas fa-search" aria-hidden="true"></span></a></li>
-                        <li class="nav-item me-lg-3"><a href=""
+                        <li class="nav-item me-lg-3"><a href="https://absa-capital.vercel.app"
                                 class="phone-btn btn btn-primary btn-style d-none d-lg-block btn-style ms-2">Login</a>
                         </li>
                     </ul>
@@ -449,7 +449,7 @@
                         <h6 class="footer-title-29">Quick Links</h6>
                         <li><a href="about.html">Privacy Policy</a></li>
                         <li><a href="blog.html">Terms of Service</a></li>
-                        <li><a href="index.html">Online Access</a></li>
+                        <li><a href="https://absa-capital.vercel.app">Online Access</a></li>
                         <li><a href="blog.html">FAq</a></li>
 
                     </ul>
