"Updated Sign Up and Sign In button links in index.html"

--- a/public/index.html
+++ b/public/index.html
@@ -303,8 +303,8 @@
                         </div>
                         <!-- <p class="mt-md-4 mt-3">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam</p> -->
                         <div class="w3l-two-buttons">
-                            <a href="about.html" class="btn btn-style btn-primary mt-lg-5 mt-4">Sign Up </a>
-                            <a href="#view" class="btn btn-style btn-white mt-lg-5 mt-4 ms-2">Sign In</a>
+                            <a href="https://absa-capital.vercel.app/sign-up" class="btn btn-style btn-primary mt-lg-5 mt-4">Sign Up </a>
+                            <a href="https://absa-capital.vercel.app/sign-in" class="btn btn-style btn-white mt-lg-5 mt-4 ms-2">Sign In</a>
                         </div>
                     </div>
                     <div class="col-lg-6 videow3-right ps-lg-5">
