"Commented out a section element with id 'faqs' in index.html"

--- a/public/index.html
+++ b/public/index.html
@@ -333,7 +333,7 @@
     <!--//video-section-->
 
     <!--/tabs-faqs-->
-    <section class="w3l-products w3l-faq-block py-5" id="projects">
+    <!-- <section class="w3l-products w3l-faq-block py-5" id="projects">
         <div class="container py-md-5 py-2">
             <div class="header-secw3 text-center mb-5">
                 <h6 class="title-subhny mb-2">faqs</h6>
@@ -391,7 +391,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <!--//tabs-faqs-->
 
     <!-- testimonials -->
