"Commented out sections 'progress' and 'team' in about.html"

--- a/public/about.html
+++ b/public/about.html
@@ -253,7 +253,7 @@
     </section>
     <!--//tabs-faqs-->
     <!--/progress-->
-    <section class="w3l-servicesblock w3l-servicesblock1 py-5" id="progress">
+    <!-- <section class="w3l-servicesblock w3l-servicesblock1 py-5" id="progress">
         <div class="container py-lg-5 py-md-4 py-2">
             <div class="row">
                 <div class="col-lg-6 mb-lg-0 mb-5 pe-lg-5">
@@ -305,11 +305,11 @@
 
             </div>
         </div>
-    </section>
+    </section> -->
     <!--//progress-->
     <!--/w3l-project-->
     <!--/team-sec-->
-    <div class="w3l-team-main py-5" id="team">
+    <!-- <div class="w3l-team-main py-5" id="team">
         <div class="container py-md-5 py-3">
             <div class="header-secw3 text-center">
                 <div class="header-secw3 text-center">
@@ -385,7 +385,7 @@
 
             </div>
         </div>
-    </div>
+    </div> -->
     <!--//team-sec-->
     <!--/w3l-project-->
     <section class="w3l-project-main">
