"Updated image source in slider-info div from 'absa-logo.png' to 'banner4.jpg'"

--- a/public/index.html
+++ b/public/index.html
@@ -103,7 +103,7 @@
 
                                 <div class="slider-info">
                                     <div class="w3l-slidehny-img banner-top1">
-                                        <img src="assets/images/absa-logo.png" alt="" class="radius-image img-fluid">
+                                        <img src="assets/images/banner4.jpg" alt="" class="radius-image img-fluid">
                                     </div>
                                 </div>
                             
